--- a/src/components/Blogs.css
+++ b/src/components/Blogs.css
@@ -174,3 +174,37 @@
 .blogd-close-btn i {
     font-size: 4rem;
 }
+
+@media (max-width: 900px) {
+    .blogs-left {
+        background: none;
+        width: 100%;
+    }
+
+    .blogs-left img {
+        top: 10%;
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .blogs-right {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+    }
+
+    .blogd-close-btn {
+        top: 10rem;
+        right: 4rem;
+    }
+
+    .blogs-right-form {
+        margin-top: 18rem;
+    }
+
+    .text-input,
+    .title-input {
+        width: 40rem;
+    }
+}
