--- a/src/components/Calender.css
+++ b/src/components/Calender.css
@@ -119,3 +119,9 @@
     cursor: default;
     pointer-events: none;
 }
+
+@media(max-width: 900px) {
+    .calender {
+        height: 100%;
+    }
+}
