--- a/src/components/News.css
+++ b/src/components/News.css
@@ -358,3 +358,165 @@
 .news-footer p a {
     color: #bbb;
 }
+
+@media (max-width: 1400px) {
+    .nav-links {
+        row-gap: 0.5rem;
+    }
+
+    .news-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: (2, 1fr);
+        overflow-y: scroll;
+    }
+
+    .news-grid::-webkit-scrollbar {
+        display: none;
+    }
+
+    .blog-posts {
+        overflow-y: scroll;
+    }
+
+    .blog-posts::-webkit-scrollbar {
+        display: none;
+    }
+
+    .blog-post {
+        flex: 0 1 calc(100% - 00.6rem);
+    }
+}
+
+@media(max-width: 1024px) {
+    .news-grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: (0, 1fr);
+
+        overflow-y: scroll;
+
+    }
+
+    .news-grid-item {
+        min-height: 100%;
+        width: 100%;
+    }
+}
+
+@media(max-width: 900px) {
+    .nesw {
+        height: 100%;
+        overflow-y: scroll;
+
+    }
+
+    .nesw::-webkit-scrollbar {
+        display: none;
+    }
+
+    .news-content {
+        flex-direction: column;
+        width: 100%;
+        height: 200rem;
+        row-gap: 2rem;
+    }
+
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        height: 18rem;
+
+    }
+
+    .user {
+        width: calc(30% - 3rem);
+        height: 100%;
+    }
+
+    .categories {
+        width: 70%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        row-gap: 1rem;
+    }
+
+    .nav-links {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .nav-link {
+        margin-right: 2rem;
+    }
+
+    .news-section {
+        width: 100%;
+    }
+
+    .news-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: (1, 1fr);
+    }
+
+    .blog-post {
+        flex: 0 1 calc(50% - 0.6rem);
+    }
+
+    .weather-calender {
+        flex-direction: row;
+        column-gap: 2rem;
+    }
+}
+
+@media(max-width:500px) {
+    .news-header {
+        padding: 0 2rem;
+    }
+
+    .logo {
+        font-size: 3rem;
+    }
+
+    .search-bar input {
+        width: 18rem;
+    }
+
+    .search-bar input:focus {
+        width: 23rem;
+    }
+
+    .navbar {
+        flex-direction: column;
+        height: 30rem;
+        margin-bottom: 2rem;
+    }
+
+    .user {
+        width: 100%;
+        min-height: 40%;
+    }
+
+    .user p {
+        display: none;
+    }
+
+    .categories {
+        width: 100%;
+    }
+
+    .news-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: (3, 1fr);
+    }
+
+    .weather-calender {
+        flex-direction: column;
+    }
+
+    .news-footer {
+        min-height: 8rem;
+
+    }
+}
